# ispc

./: .appveyor-clean-cache.txt  .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  .trivyignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ConstantsScanner.h  LICENSE.txt  MAINTAINERS.md  Makefile  MakefileJITTest  README.md  README.rst  README.txt  READMErst.txt  SECURITY.md  alloy.py  ast.cpp  ast.h  bitcode2cpp.py  buildall.bat  buildispc.bat  builtins-avx-common.ll  builtins-avx-x2.ll  builtins-avx.ll  builtins-c.c  builtins-dispatch.ll  builtins-sse.ll  builtins-sse2-common.ll  builtins-sse2-x2.ll  builtins-sse2.ll  builtins-sse4-common.ll  builtins-sse4-x2.ll  builtins-sse4.ll  (+78 more)
benchmarks/: CMakeLists.txt  README.md  common.h  config.h.in
benchmarks/01_trivial/: 01_aossoa.cpp  01_aossoa.ispc  02_soaaos.cpp  02_soaaos.ispc  03_popcnt.cpp  03_popcnt.ispc  04_fastdiv.cpp  04_fastdiv.ispc  05_packed_load_store.cpp  05_packed_load_store.ispc  06_math.cpp  06_math.ispc  07_loop_unroll_varying-cpu.cpp  07_loop_unroll_varying-cpu.ispc  07_loop_unroll_varying.cpp  07_loop_unroll_varying.ispc  08_masked_load_store.cpp  08_masked_load_store.ispc  09_shuffle.cpp  09_shuffle.ispc  10_cttz_ctlz.cpp  10_cttz_ctlz.ispc  11_lanemask.cpp  11_lanemask.ispc  12_broadcast.cpp  12_broadcast.ispc  13_rotate.cpp  13_rotate.ispc  14_shift.cpp  14_shift.ispc  15_reduce_equal.cpp  15_reduce_equal.ispc  16_dispatcher_overhead.cpp  16_dispatcher_overhead.ispc  CMakeLists.txt  README.md
benchmarks/02_medium/: CMakeLists.txt  README.md  test01.cpp  test01.ispc  test02_array.cpp  test02_array.ispc  test03_int_div.cpp  test03_int_div.ispc
benchmarks/03_complex/: CMakeLists.txt  README.md
benchmarks/04_intrinsics/: 01_sse_intrinsics.cpp  01_sse_intrinsics.ispc  02_sse2_intrinsics.cpp  02_sse2_intrinsics.ispc  CMakeLists.txt  TestBase.h
benchmarks/04_tensor/: 01_tensor_add.cpp  01_tensor_add.ispc  02_tensor_mul.cpp  02_tensor_mul.ispc  CMakeLists.txt  dlpack.h  tensor.isph
benchmarks/cmake/: AddBenchmark.cmake
examples/cpu/: CMakeLists.txt  README.txt  requirements.txt
examples/cpu/amx/: CMakeLists.txt  amx_matmul.cpp  amx_matmul.ispc
examples/cpu/aobench/: CMakeLists.txt  ao.cpp  ao.ispc  ao_serial.cpp
examples/cpu/aobench_instrumented/: CMakeLists.txt  ao.cpp  ao_instrumented.ispc  instrument.cpp  instrument.h
examples/cpu/attention/: CMakeLists.txt  attention.ispc  attention.py  nanobind_wrapper.cpp
examples/cpu/cmake/: AddISPCExample.cmake  AddISPCExampleLegacy.cmake  AddISPCExampleModern.cmake
examples/cpu/deferred/: CMakeLists.txt  common.cpp  deferred.h  dynamic_c.cpp  kernels.ispc  main.cpp
examples/cpu/gmres/: CMakeLists.txt  algorithm.cpp  algorithm.h  debug.h  main.cpp  matrix.cpp  matrix.h  matrix.ispc  mmio.c  mmio.h  util.h
examples/cpu/mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.ispc  mandelbrot_serial.cpp
examples/cpu/mandelbrot_tasks/: CMakeLists.txt  mandelbrot_tasks.cpp  mandelbrot_tasks.ispc  mandelbrot_tasks_serial.cpp
examples/cpu/noise/: CMakeLists.txt  noise.cpp  noise.ispc  noise_serial.cpp
examples/cpu/options/: CMakeLists.txt  options.cpp  options.ispc  options_defs.h  options_serial.cpp
examples/cpu/perfbench/: CMakeLists.txt  perfbench.cpp  perfbench.ispc  perfbench_serial.cpp
examples/cpu/point_transform_ctypes/: CMakeLists.txt  point_transform.py
examples/cpu/point_transform_nanobind/: CMakeLists.txt  nanobind_wrapper.cpp  point_transform.ispc  point_transform.py
examples/cpu/rt/: .gitignore  CMakeLists.txt  cornell.bvh  cornell.camera  rt.cpp  rt.ispc  rt_serial.cpp
examples/cpu/sgemm/: CMakeLists.txt  SGEMM_kernels.ispc  SGEMM_main.cpp
examples/cpu/simple/: .gitignore  CMakeLists.txt  simple.cpp  simple.ispc
examples/cpu/simple_jit/: CMakeLists.txt  simple.cpp  simple.ispc
examples/cpu/simple_lib/: CMakeLists.txt  simple.cpp  simple.ispc
examples/cpu/simple_modern/: CMakeLists.txt  README.md  simple.cpp  simple.ispc
examples/cpu/sort/: CMakeLists.txt  sort.cpp  sort.ispc  sort_serial.cpp
examples/cpu/stencil/: CMakeLists.txt  stencil.cpp  stencil.ispc  stencil_serial.cpp
examples/cpu/volume_rendering/: CMakeLists.txt  density_lowres.vol  volume.cpp  volume.ispc  volume_serial.cpp
examples/portable/genx/: CMakeLists.txt  README.txt  TestLists.txt  runner.py.in
examples/xpu/: CMakeLists.txt  README.md  README.txt  TestLists.txt  runner.py.in
examples/xpu/aobench/: CMakeLists.txt  ao.cpp  ao_serial.cpp  aobench.ispc
examples/xpu/callback-esimd/: CMakeLists.txt  callback-esimd.cpp  callback-esimd.ispc  main.cpp
examples/xpu/cmake/: AddPerfExample.cmake  TestDrivers.cmake
examples/xpu/common/: L0_helpers.h  common_helpers.h  share.h  timing.h
examples/xpu/invoke-simd-vadd/: CMakeLists.txt  invoke_simd_ispc.cpp  vadd.ispc
examples/xpu/invoke-sycl-aobench/: CMakeLists.txt  ao.ispc  ao.isph  ao_sycl.ispc  ao_sycl_kernel.inl  ao_sycl_lib.cpp  aobench_stub.ih  invoke_sycl_aobench.cpp
ispcrt/: CMakeLists.txt  ispc_tasking.c  ispc_tasking.cpp  ispcrt.cpp  ispcrt.h  ispcrt.hpp  ispcrt.isph
ispcrt/cmake/: Finddpcpp_compiler.cmake  Findlevel_zero.cmake  interop.cmake  ispc.cmake  ispcrtConfig.cmake.in
ispcrt/detail/: CMakeLists.txt  CommandList.h  CommandQueue.h  Context.h  Device.h  Exception.h  Fence.h  Future.h  IntrusivePtr.h  Kernel.h  MemoryView.h  Module.h  ModuleOptions.h  TaskQueue.h
ispcrt/example_cmake/: CMakeLists.txt  test_ispcrt.cpp
ispcrt/tests/: CMakeLists.txt
lang/: CMakeLists.txt  main.cpp  parser_test.cpp  scanner_test.cpp
lang/scripts/: run_clang_format.sh
lang/src/: consumer_ref_wrapper.h  diagnostic_printer.cpp  expr.cpp  invalid_token_diagnostic.cpp  invalid_token_diagnostic.h  parser.cpp  parser.yy  scanner.cpp  scanner.ll
lang/testing/: diagnostic_test.cpp  diagnostic_test.h  diagnostic_tests.cpp  main.cpp  parser_tests.cpp  scanner_tests.cpp
src/: arch.h  (+67 more)
superbuild/: 14_0_15_0-ld-symlink-lld.patch  CMakeLists.txt  CMakePresets.json  README.md  intPresets.json  os-intPresets.json  osPresets.json  vc_intrinsics.patch
(+5295 files in other folders)
